# jupswapper

./: README.md  env.sh  pyproject.toml
examples/: swap_sol_for_bonk.py  wallet.py
