[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupswap"
version = "0.1.0"
description = "A Python package for interacting with Jupiter Aggregator on Solana"
readme = "README.md"
authors = [
    { name = "Charly Robinson La Rocca" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "solders",
    "solana>=0.35",
    "pydantic",
    "base58",
    "mnemonic",
    "requests" 
]

[project.urls]
Homepage = "https://github.com/laroccacharly/jupswap" 